force-app/main/default/objects/BMCServiceDesk__BMC_Person__c/fields/BMCServiceDesk__FirstName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FirstName__c</fullName>
    <label>First Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>