force-app/main/default/objects/BMCServiceDesk__BMC_Person__c/fields/BMCServiceDesk__PagerEmail__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PagerEmail__c</fullName>
    <label>Pager Email</label>
    <length>254</length>
    <type>Text</type>
</CustomField>