force-app/main/default/objects/BMCServiceDesk__BMC_Person__c/fields/BMCServiceDesk__PagerParams1__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PagerParams1__c</fullName>
    <label>Pager Parameters 1</label>
    <length>254</length>
    <type>Text</type>
</CustomField>