force-app/main/default/objects/BMCServiceDesk__BMC_Person__c/fields/BMCServiceDesk__PagerPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PagerPhoneNumber__c</fullName>
    <label>Pager Phone Number</label>
    <length>254</length>
    <type>Text</type>
</CustomField>