force-app/main/default/objects/BMCServiceDesk__BMC_Person__c/fields/BMCServiceDesk__PagerPINNumber__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PagerPINNumber__c</fullName>
    <label>Pager PIN Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>