force-app/main/default/objects/BMCServiceDesk__BMC_Person__c/fields/BMCServiceDesk__PersonDepartment__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PersonDepartment__c</fullName>
    <label>Person Department</label>
    <length>254</length>
    <type>Text</type>
</CustomField>