force-app/main/default/objects/BMCServiceDesk__BMC_Person__c/fields/BMCServiceDesk__PersonRegion__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PersonRegion__c</fullName>
    <label>Person Region</label>
    <length>254</length>
    <type>Text</type>
</CustomField>