force-app/main/default/objects/BMCServiceDesk__BMC_Person__c/fields/BMCServiceDesk__SecondaryEmail__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SecondaryEmail__c</fullName>
    <label>Secondary Email</label>
    <length>254</length>
    <type>Text</type>
</CustomField>