force-app/main/default/objects/BMCServiceDesk__BMC_Person__c/fields/BMCServiceDesk__Title__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Title__c</fullName>
    <label>Title</label>
    <length>254</length>
    <type>Text</type>
</CustomField>